syntax = "proto3";

option go_package = "./notification_proto_gen";

import "google/protobuf/timestamp.proto";
import "notification_metadata.proto";
import "update_notification_preferences.proto";
import "get_notification_preferences.proto";

service NotificationService {
  // Khi user đăng ký ứng dụng để sử dụng -> sẽ tạo ra dữ liệu ở bảng notification_preferences
  rpc CreateUserSettingNotification(CreateUserSettingNotificationRequest) returns (CreateUserSettingNotificationResponse);

  rpc GetUserSettingNotification(GetUserNotificationSettingRequest) returns (GetUserNotificationSettingResponse);

  // Khi user cập nhật lại việc nhận thông báo -> sẽ cập nhật
  rpc UpdateUserSettingNotification(UpdateUserSettingNotificationRequest) returns (UpdateUserSettingNotificationResponse);

  // Gửi thông báo cho user
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse) {}

  // Lấy danh sách thông báo của user
  rpc GetUserNotifications(GetUserNotificationsRequest) returns (GetUserNotificationsResponse) {}

  // Đánh dấu 1 thông báo đã đọc thông báo
  rpc MarkAsRead(MarkAsReadRequest) returns (MarkAsReadResponse) {}

  rpc MarkAllRead(MarkAllReadRequest) returns (MarkAsReadResponse) {}
}

message CreateUserSettingNotificationRequest {
  int64 user_id = 1;
}

message CreateUserSettingNotificationResponse {}

message UpdateUserSettingNotificationRequest {
    UpdateEmailNotificationPreferencesRequest email_preferences = 1;
    UpdateInAppNotificationPreferencesRequest in_app_preferences = 2;
    int64 user_id = 3;
}

message UpdateUserSettingNotificationResponse {
    UpdateEmailNotificationPreferencesResponse email_preferences = 1;
    UpdateInAppNotificationPreferencesResponse in_app_preferences = 2;
}

message Notification {
  string id = 1;
  int64 user_id = 2;
  int64 type = 3;
  string title = 4;
  string content = 5;
  string image_url = 6;
  bool is_read = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message SendNotificationRequest {
  int64 user_id = 1;
  int64 type = 2;
  string title = 3;
  string content = 4;
  map<string, string> metadata = 5;
}

message SendNotificationResponse {
  string notification_id = 1;
  bool success = 2;
  string error = 3;
}

message GetUserNotificationsRequest {
  int64 user_id = 1;
  int64 page = 2;
  int64 limit = 3;
}

message GetUserNotificationsResponse {
  repeated Notification data = 1;
  NotificationMetadata metadata = 2;
  int64 unread_count = 3;
}

message MarkAsReadRequest {
  string notification_id = 1;
  int64 user_id = 2;
}

message MarkAsReadResponse {}

message GetUserNotificationSettingRequest {
  int64 user_id = 1;
}

message GetUserNotificationSettingResponse {
  GetEmailNotificationPreferencesResponse email_preferences = 1;
  GetInAppNotificationPreferencesResponse in_app_preferences = 2;
}

message MarkAllReadRequest {
  int64 user_id = 1;
}